--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ The title of the webpage
 </head>
 <body>
 <h1>Jennie We All Love</h1>
-<img src="jennie.jpg">
+<img src="../jennie.jpg">
 This is where information to be presented to the user is entered.
 </body>
 </html>
