--- a/index.html
+++ b/index.html
@@ -7,7 +7,20 @@ The title of the webpage
 <body>
 <h1>Jennie We All Love</h1>
 <img src="../jennie.jpg">
-This is where information to be presented to the user is entered.
+Here are some fun facts about Jennie!
+ 1. Before making her debut, Jennie featured on G-Dragon’s track “Black” and also starred in his music video for “That XX”. (Working with G-Dragon in your pre-debut days is the ultimate dream!)
+2. She trained for 5 years and 11 months and is known as the ‘YG princess’. (She was only 14 when she was recruited by YG Entertainment)
+3. Jennie is good friends with Nayeon (TWICE), Yerin (GFRIEND), Chahee (Melody Day) and Lime (Hello Venus).
+4. She is considered to be the best dressed BLACKPINK member and even got the nickname ‘Human Gucci’ because she wears the brand so often. (What an awesome nickname!)
+5. If Jennie had to date another member she would choose Jisoo because she knows how to make her laugh. (Awww!)
+6. When Jennie was young she lived in New Zealand and even starred in an MBC documentary about her life and schooling there. (She was born to be a star!)
+7. Her favourite colours are black and pink. (I see what she did there)
+8. Jennie is the best cook out of the group and when she’s not busy she loves to watch shows on Netflix. (She doesn’t watch The Walking Dead however because she’s ‘not into zombies’)
+9. Her favourite food is anything Korean and she absolutely loves to eat milk-flavoured ice cream.
+10. When Jennie appeared on Knowing Brothers she claimed one of her special talents was eating chips without making a sound. The cast members quickly debunked the talent when she hilariously made a crunching noise while eating.
+
+
+
 </body>
 </html>
  
